Bug:fixed Dashboard overlaps

--- a/Cliente/src/index.css
+++ b/Cliente/src/index.css
@@ -13,6 +13,8 @@ html{
   display: flex;
   height: 100%;
   width: 100%;
+  z-index: -1;
+  position: absolute;
 }
 
 body {
@@ -21,5 +23,7 @@ body {
   background-color: var(--bg-color);
   height: 100%;
   width: 100%;
+  z-index: -1;
+  position: absolute;
 }
 
